# lib_wfa2

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  readme.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: MEMORY_MODE_FINDINGS.md  MEMORY_MODE_SUMMARY.md  MIGRATION_GUIDE.md  README.md  design.md  doc.md  memory_mode_analysis.md  memory_mode_ultralow.md  troubleshooting_cigar.md  wfa2.md
examples/: example1.rs  example2.rs  test_memory_mode.rs  test_ultralow_mode.rs  ultralow_biwfa.rs
src/: affine_wavefront.rs  bindings.rs  bindings_wfa.rs  lib.rs
tests/: memory_modes.rs
