[package]
name = "libwfa2"
version = "0.1.2"
edition = "2021"
authors = ["Joachim Fritscher <joachim.fritscher@gmail.com>", "Andrea Guarracino <aguarra1@uthsc.edu>"]
license = "MIT"
description = "Bindings to the C implementation of WFA2-lib"
repository = "https://github.com/AndreaGuarracino/libwfa2"
readme = "readme.md"
keywords = ["bioinformatics", "alignment", "wfa"]
categories = ["science"]

[build-dependencies]
bindgen = "0.70.1"
clang-sys = "1.8.1"
