[package]
name = "lib_wfa2"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Guarracino <aguarra1@uthsc.edu>"]
license = "MIT"
description = "Bindings to the C implementation of WFA2-lib"
repository = "https://github.com/AndreaGuarracino/lib_wfa2"
readme = "README.md"
keywords = ["bioinformatics", "alignment", "wfa"]
categories = ["science"]

[dependencies]

[build-dependencies]
bindgen = "0.72.0"